syntax = "proto3";
package getuserbyname;
option go_package = "valno.com/proto";
message SearchQuery{
    string query = 1;
}
message Status_One{
    int64 code = 1;
    string name = 2;
    string class = 3;
    int64 roll = 4;
}

service AddService{
    rpc GetUserByName(SearchQuery) returns (Status_One);

}